--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "homeboard_site",
   "version": "1.0.0",
   "description": "homeboard_site: An Ionic project",
+  "private": true,
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^0.7.1",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "prety-date": "^0.2.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
